[gd_scene load_steps=14 format=2]

[ext_resource path="res://game/card/components/base.png" type="Texture" id=1]
[ext_resource path="res://game/card/components/texture/fill.png" type="Texture" id=2]
[ext_resource path="res://game/card/components/texture/diagonal.png" type="Texture" id=3]
[ext_resource path="res://game/card/components/shape/rectangle_outline.png" type="Texture" id=4]
[ext_resource path="res://game/card/components/shape/rectangle_cover.png" type="Texture" id=5]
[ext_resource path="res://game/card/components/texture/outline.png" type="Texture" id=6]
[ext_resource path="res://game/card/components/selection.png" type="Texture" id=7]
[ext_resource path="res://game/card/components/shape/diamond_outline.png" type="Texture" id=8]
[ext_resource path="res://game/card/components/shape/capsule_outline.png" type="Texture" id=9]
[ext_resource path="res://game/card/components/shape/diamond_cover.png" type="Texture" id=10]
[ext_resource path="res://game/card/components/shape/capsule_cover.png" type="Texture" id=11]
[ext_resource path="res://game/card/card_view.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 34 )

[node name="Card" type="Area2D"]
position = Vector2( 44, 34 )
rotation = 1.5708
scale = Vector2( 1.00319, 1 )
script = ExtResource( 12 )

[node name="Outline" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0.576471, 1, 1 )
texture = ExtResource( 7 )

[node name="Base" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )

[node name="OneShape" type="Node2D" parent="."]
visible = false

[node name="Position0" type="Position2D" parent="OneShape"]

[node name="TwoShape" type="Node2D" parent="."]
visible = false

[node name="Position0" type="Position2D" parent="TwoShape"]
position = Vector2( 0, -13 )

[node name="Position1" type="Position2D" parent="TwoShape"]
position = Vector2( 0, 13 )

[node name="ThreeShape" type="Node2D" parent="."]
visible = false

[node name="Position0" type="Position2D" parent="ThreeShape"]
position = Vector2( 0, -20 )

[node name="Position1" type="Position2D" parent="ThreeShape"]

[node name="Position2" type="Position2D" parent="ThreeShape"]
position = Vector2( 0, 20 )

[node name="Resources" type="Node" parent="."]

[node name="Shape" type="Node" parent="Resources"]

[node name="CapsuleCover" type="Sprite" parent="Resources/Shape"]
position = Vector2( 35.5, -11.5 )
z_index = 1
texture = ExtResource( 11 )

[node name="CapsuleOutline" type="Sprite" parent="Resources/Shape"]
position = Vector2( 35.5, -11.5 )
texture = ExtResource( 9 )

[node name="DiamondCover" type="Sprite" parent="Resources/Shape"]
position = Vector2( 35.5, -11.5 )
z_index = 1
texture = ExtResource( 10 )

[node name="DiamondOutline" type="Sprite" parent="Resources/Shape"]
position = Vector2( 35.5, -11.5 )
texture = ExtResource( 8 )

[node name="RectangleCover" type="Sprite" parent="Resources/Shape"]
position = Vector2( 35.5, -11.5 )
z_index = 1
texture = ExtResource( 5 )

[node name="RectangleOutline" type="Sprite" parent="Resources/Shape"]
position = Vector2( 35.5, -11.5 )
texture = ExtResource( 4 )

[node name="Texture" type="Node" parent="Resources"]

[node name="Diagonal" type="Sprite" parent="Resources/Texture"]
position = Vector2( 35.5, -11.5 )
texture = ExtResource( 3 )

[node name="Fill" type="Sprite" parent="Resources/Texture"]
position = Vector2( 35.5, -11.5 )
texture = ExtResource( 2 )

[node name="Outline" type="Sprite" parent="Resources/Texture"]
position = Vector2( 35.5, -11.5 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
